new api, test cases

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, mypy
+envlist = py36, py37, mypy, docs, report, clean
 
 # ------------- Dependancy setup ---------------------
 [deps]
@@ -54,3 +54,26 @@ deps =
     mypy >= 0.701
     mypy-protobuf
     grpcio_tools
+
+[testenv:docs]
+deps =
+    -r{toxinidir}/docs/requirements.txt
+    {[mldeps-py37]deps}
+commands =
+    sphinx-build {posargs:-E} -b html docs dist/docs
+    sphinx-build -b linkcheck docs dist/docs -j4
+
+[testenv:report]
+deps =
+    coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
+
+[testenv:clean]
+skip_install = true
+deps =
+    coverage
+commands =
+    coverage erase
