--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,10 @@ ENV/
 # IDE settings
 .vscode/
 .idea/
+
+# leftover from examples
+*/.hangar/
+*/.ipynb_checkpoints/
+examples/head.stock
+examples/.gitignore
+docs/*.ipynb
