--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ deps =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+passenv =
+    *
 
 [testenv:py36]
 basepython = {env:TOXPYTHON:python3.6}
@@ -56,6 +58,7 @@ deps =
     grpcio_tools
 
 [testenv:docs]
+usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
     {[mldeps-py37]deps}
