first example and never ending clean up

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ basepython = {env:TOXPYTHON:python3.7}
 deps =
     {[mldeps-py37]deps}
 commands =
-    pytest --basetemp={envtmpdir} --numprocesses=2 --cov --cov-report=term-missing
+    pytest --basetemp={envtmpdir} --numprocesses=2 --cov --cov-report=term-missing -v
 
 [testenv:mypy]
 basepython = {env:TOXPYTHON:python3.7}
