documentation quick start

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,9 @@ plugins:
 markdown_extensions:
   - mkdocs-click
   - codehilite
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 
 extra:
   social:
