--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -34,7 +34,11 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: python3 -m pip install -r docs/requirements.txt
+        # TODO Fix this run
+        run: |
+          python3 -m pip install -r docs/requirements.txt
+          pip install scikit-build
+          python3 setup.py install
 
       - run: mkdocs build
 
