--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -10,21 +10,13 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-
-      - name: Upgrade pip
-        run: |
-          # install pip=>20.1 to use "pip cache dir"
-          python3 -m pip install --upgrade pip
-
       - name: Get pip cache dir
         id: pip-cache
         run: echo "::set-output name=dir::$(pip cache dir)"
-
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -32,15 +24,12 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('docs/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-
       - name: Install dependencies
-        # TODO Fix this run
         run: |
           python3 -m pip install -r docs/requirements.txt
-          pip install scikit-build
           python3 setup.py install
-
-      - run: mkdocs build
+      - name: Build Docs
+        run: bash ./scripts/build_docs.sh
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
