--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pytest pytest-cov mypy black isort==5.1.4 torch
-          pip install .
+          pip install -e .
       - name: Test
         run: bash scripts/test.sh
       - name: Upload coverage
