--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install pytest coverage[toml] pytest-cov mypy black isort==5.1.4 torch torchvision Pillow
+          pip install pytest coverage[toml] pytest-cov pytest-xdist mypy black isort==5.1.4 torch torchvision Pillow
           pip install -e .
       - name: Test
         run: bash scripts/test.sh
