--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ warn_unused_configs = True
 
 # ------------------------- Per Module Configuration --------------------------
 
-[mypy-hangar]
+[mypy-hangar.*]
 ignore_missing_imports = True
 
 [mypy-numpy]
